mobile styles for projects and footer. Fixed h1 sizing on mobile view.

--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,13 @@ header .nav-links .nav-container h1 {
   font-weight: bold;
   z-index: 1;
 }
+@media (max-width: 500px) {
+  header .nav-links .nav-container h1 {
+    font-size: 8vw;
+    line-height: 1.4;
+    letter-spacing: 1.2px;
+  }
+}
 header .nav-links .nav-container .hide-nav {
   position: absolute;
   display: none;
@@ -308,6 +315,11 @@ h2 {
   line-height: 1.2;
   font-size: 1.2rem;
 }
+@media (max-width: 500px) {
+  .project-card p {
+    margin: 10px 3%;
+  }
+}
 .project-card header {
   background-color: white;
   margin: 15px 0;
@@ -322,10 +334,27 @@ h2 {
   border: 1px outset white;
   letter-spacing: 3px;
 }
-.project-card:nth-child(even) h3 {
+@media (max-width: 500px) {
+  .project-card h3 {
+    align-self: center;
+    width: 90%;
+    text-align: center;
+  }
+}
+.card-left h3 {
   align-self: start;
   margin-right: 0;
   margin-left: -4px;
+}
+@media (max-width: 500px) {
+  .card-left h3 {
+    align-self: center;
+  }
+}
+@media (max-width: 500px) {
+  .project-section h2 {
+    margin: 20px 0 15px 0;
+  }
 }
 footer {
   display: flex;
@@ -339,9 +368,22 @@ footer .footer-content {
   justify-content: space-between;
   margin: 25px 10%;
 }
+@media (max-width: 500px) {
+  footer .footer-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
 footer .footer-content h3 {
   font-size: 1.3rem;
   font-weight: bolder;
+}
+@media (max-width: 500px) {
+  footer .footer-content h3 {
+    margin-top: 25px;
+  }
 }
 footer .footer-content p {
   margin: 8px 0;
