--- a/less/homepage.less
+++ b/less/homepage.less
@@ -48,6 +48,11 @@ header {
             font-family: Roboto, Arial, sans-serif;
             font-weight: bold;
             z-index: 1;
+          @media @phone {
+            font-size: 8vw;
+            line-height: 1.4;
+            letter-spacing: 1.2px;
+          }
         }
         .hide-nav {
           position: absolute;
@@ -180,6 +185,9 @@ h2 {
     margin: 10px 25%;
     line-height: 1.2;
     font-size: 1.2rem;
+    @media @phone {
+      margin: 10px 3%;
+    }
   }
   header {
     background-color: white;
@@ -195,12 +203,31 @@ h2 {
     align-self: flex-end;
     border: 1px outset white;
     letter-spacing: 3px;
+    @media @phone {
+      align-self: center;
+      width: 90%;
+      text-align: center;
+    }
   }
-  &:nth-child(even) {
-    h3 {
-      align-self: start;
-      margin-right: 0;
-      margin-left: -4px;
+}
+
+.card-left {
+  h3 {
+    align-self: start;
+    margin-right: 0;
+    margin-left: -4px;
+    @media @phone {
+      align-self: center;
+    }
+  }
+}
+
+
+
+.project-section {
+  @media @phone {
+    h2 {
+      margin: 20px 0 15px 0;
     }
   }
 }
@@ -215,9 +242,15 @@ footer {
     flex-direction: row;
     justify-content: space-between;
     margin: 25px 10%;
+    @media @phone {
+      .flex(column);
+    }
     h3 {
       font-size: 1.3rem;
       font-weight: bolder;
+      @media @phone {
+        margin-top: 25px;
+      }
     }
     p {
       margin: 8px 0;
